--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Socket.IO chat</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
+      body { font: 20px Helvetica, Arial; }
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
@@ -22,13 +22,35 @@
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       var socket = io();
+      var offset = Math.random() * 1231231231231;///the most bullshit way to create unique ideas
+      var id = parseInt(offset);
+      var lastTimeout;
+      // var strikeCount = 0;
+      $('#m').keyup(function(){
+        var message = $('#m').val();
+        socket.emit('chat message', {"id": id, "message": message});
+        clearTimeout(lastTimeout);
+        lastTimeout = setTimeout(function(){
+          $('#m').val('');
+          id++;
+          clearTimeout(lastTimeout);
+        }, 700);
+      });
       $('form').submit(function(){
-        socket.emit('chat message', $('#m').val());
+        var message = $('#m').val();
+        console.log("test:"+message);
+        socket.emit('chat message', {"id": id, "message": message});
         $('#m').val('');
+        id++;
         return false;
       });
+
       socket.on('chat message', function(msg){
-        $('#messages').append($('<li>').text(msg));
+        if ($('#' + msg.id).length != 0) {
+          $('#' + msg.id).text(msg.message);
+        } else {
+          $('#messages').append($('<li>').text(msg.message).attr('id', msg.id));
+        }
       });
     </script>
   </body>
